
This file contains information about the changes between the different versions
of PyAMF.

0.5 (unreleased)
----------------

0.4rc3 (unreleased)
------------------
 - Now checking for all types of supported xml lib types for encoding, but will
   only use the first implementation for decoding (Ticket:426)
 - fpconst dependancy is now only required if the platform requires it
   (Ticket:356)
 - Now checking for all types of supported xml lib types for encoding, but will 
   only use the first implementation for decoding (Ticket:426)

0.4rc2 (2009-01-05)
-------------------
 - Support for SQLAlchemy 0.4.x (Ticket:410)

0.4rc1 (2008-12-31)
-------------------
 - Support for encoding/decoding SQLAlchemy ORM objects with a new adapter.
   Lots of people involved in this one, but special thanks to Dave Thompson
   and Michael Van Tellingen for making this happen. (Ticket:277)
 - All gateways now log exceptions when exceptions are raised during
   en/decoding. (Ticket:394)
 - Flex messaging now uses correct static attributes for encoding. Determining
   static/dynamic attributes on objects is now easier (Ticket:357)
 - Added use_proxy option to amf3 which will automagically convert ObjectProxy
   to dict and ArrayCollection to list on decoding, and vice versa on encode.
   Thanks to dthompso for the excellent patch (Ticket:355)
 - flex.ArrayCollection now subclasses list instead of dict as non-int keys are
   not allowed. IList interface has been implemented. (Ticket:349)
 - Encoding registered subclass of list that define the 'externalised' metadata
   will be encoded as an object.
 - Encoders how have a 'strict' mode. Not generally useful for the time being
   but will help with developments in the future. Type mapped functions now
   require a second 'encoder' attribute. (Ticket:378)
-  Added adapter to handle the decimal module and, if strict is set to False,
   silently converts a Decimal instance to a float (Ticket:376)