@@ -13,8 +13,9 @@ of PyAMF.
    only use the first implementation for decoding (Ticket:426)
  - fpconst dependancy is now only required if the platform requires it
    (Ticket:356)
- - Now checking for all types of supported xml lib types for encoding, but will 
-   only use the first implementation for decoding (Ticket:426)
+ - Creating negative timestamps on certain platforms (namely Windows) are now
+   supported (Ticket:390)
+>>>>>>> .merge-right.r2017
 
 0.4rc2 (2009-01-05)
 -------------------
